--- a/.github/workflows/webhook.yml
+++ b/.github/workflows/webhook.yml
@@ -11,5 +11,7 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
-      - name: Run a script
-        run: echo "Event of type: $GITHUB_EVENT_NAME"
+      - name: Display Event Data
+        run: |
+          echo "Full event data: ${{ toJson(github.event) }}"
+          echo "Event type: ${{ github.event.action }}"
