--- a/.github/workflows/context.yml
+++ b/.github/workflows/context.yml
@@ -9,5 +9,6 @@ jobs:
       - name: "My Step"
         env:
           MY_ACTION: ${{ github.action }}
+          MY_ACTOR: ${{ github.actor }}
         run: echo "Hello World! $MY_ACTION"
 
