--- a/.github/workflows/context.yml
+++ b/.github/workflows/context.yml
@@ -10,5 +10,7 @@ jobs:
         env:
           MY_ACTION: ${{ github.action }}
           MY_ACTOR: ${{ github.actor }}
-        run: echo "Hello World! $MY_ACTION"
+        run: |
+          echo "Hello World! $MY_ACTION"
+          echo "ACTOR: $MY_ACTOR"
 
